Fix: Firefox alignment issue

--- a/src/styles/modules/Header.less
+++ b/src/styles/modules/Header.less
@@ -5,7 +5,7 @@
   padding-bottom: 0;
 
   @media @xs {
-    align-items: baseline;
+    align-items: center;
     flex-direction: row;
   }
 
